# thread-safe-allocator

./: .gitignore  CMakeLists.txt  mm.c  mm.h
benchmarks/: benchmark.c
include/: mm.h
src/: mm.c  mmhelper.c  mmhelper.h
tests/: sanity.c  sanity.h  test.c  test.h
